    add an intel entry showing the progress

-----------------------o-----------------------
beta
Mine damage reduced by 50%
Added 2s invulnerability period after jump
Watchtowers can now only spawn in asteroid belts around the sun
Applied Avas station nerfs to the arty modules
Fixed research projects
courier port no longer moves ships and cargo to target planets that don't accept them

3.1.2 - unreleased
General
Added - President Matt Damon added to credits of this mod for help with vectors and math. Thank you!
Fixed - Corrected all those getList tooltips to get

Items
Added - Consumable Item: Nanite Repair Module - Repairs your fleet, restores CR
Added - Consumable Item: Tech Locator - Grav Scan for hyperspace, indicates systems with lots of loot
Added - Consumable Item: Drive Bubble Spike - Deploys a mine that fires an interdiction pulse when an enemy fleet is in range
Added - Consumable Item: Sensor Decoy - Attracts military fleets in a large radius, baits artillery fire
Added - Consumable Item: Fuel Scoop - Succs juicy space fuel from a nearby star or nebula
Note - Some can be bought, all can be found through combat and exploration
Adjusted - Switch to non-vanilla drop group system, courtesy of Matt
Adjusted - Drop rates on all IndEvo items and loot overhauled

Artillery Stations
Added - 3 Types of artillery that shoot you on the campaign layer
Added - Artillery to Eochu Bres, Chicomoztoc, Kazeron, Sindria
Added - Derelict Artilleries that will find you while exploring
Added - Watchtower stations to hack or take over, that report your location to the artillery

Research Projects
Added - Project Transistor - Trade Relic Components for consumable items

Minefields
Added - 2 seconds of invulnerability after a jump
Adjusted - Phase ships now only add 0.3x their hull size weight to hit chance calc
Adjusted - Damage reduced by 50% (they still hurt)
Adjusted - No longer blows up on fleets in combat