@@ -5,6 +5,7 @@ Tech Locator,IndEvo_ability_locator,DURATION,"stealth-, sensors+",0.1,,10,0.1,1,
 Drive Bubble Spike,IndEvo_ability_spike,DURATION,,0,,,,0.25,FALSE,FALSE,,,,,ui_cargo_special_industrial_drop,,,graphics/icons/cargo/IndEvo_consumable_scoop.png,com.fs.starfarer.api.campaign.impl.items.consumables.itemAbilities.IndEvo_SpikeAbilityPlugin,,,651
 Emergency Fuel Scoop,IndEvo_ability_scoop,DURATION,,0.5,,3,,1,FALSE,FALSE,,,,,,,,graphics/icons/cargo/IndEvo_consumable_radar.png,com.fs.starfarer.api.campaign.impl.items.consumables.itemAbilities.IndEvo_ScoopAbilityPlugin,,,651
 Sensor Decoy,IndEvo_ability_decoy,DURATION,,0,,,,1,FALSE,FALSE,,,,,ui_cargo_special_ultratech_pickup,,,graphics/icons/cargo/IndEvo_consumable_spike.png,com.fs.starfarer.api.campaign.impl.items.consumables.itemAbilities.IndEvo_DecoyAbilityPlugin,,,651
+Transpoofer,IndEvo_ability_spoofer,DURATION,,0,,4,,3,FALSE,FALSE,,,,,,,,graphics/icons/cargo/IndEvo_consumable_transpoofer.png,com.fs.starfarer.api.campaign.impl.items.consumables.itemAbilities.IndEvo_SpooferAbilityPlugin,,,651
 ,,,,,,,,,,,,,,,,,,,,,,
 Antimatter Supercharger,IndEvo_ability_supercharger,DURATION,"burn+, stealth-",0,,,,1,FALSE,FALSE,,ui_emergency_burn_on,ui_emergency_burn_off,ui_emergency_burn_loop,world_emergency_burn_on,world_emergency_burn_off,world_emergency_burn_loop,graphics/icons/cargo/IndEvo_consumable_supercharger.png,com.fs.starfarer.api.campaign.impl.items.consumables.itemAbilities.WIP.IndEvo_SuperchargerAbilityPlugin,,,651
 Gravitic Stabilizer,IndEvo_ability_stabilizer,DURATION,,0,,,,1,FALSE,FALSE,,,,,,,,graphics/icons/cargo/IndEvo_consumable_locator.png,com.fs.starfarer.api.campaign.impl.items.consumables.itemAbilities.WIP.IndEvo_StabilizerAbilityPlugin,,,651
