@@ -47,6 +47,7 @@ Tech Locator,IndEvo_consumable_locator,IndEvo_consumable,Consumable,,10000,1000,
 Drive Bubble Spike,IndEvo_consumable_spike,IndEvo_consumable,Consumable,,3500,1000,1,,graphics/icons/cargo/IndEvo_consumable_scoop.png,ui_chip_pickup,ui_cargo_special_tech_drop,com.fs.starfarer.api.campaign.impl.items.consumables.singleUseItemPlugins.IndEvo_BaseConsumableItemPlugin,IndEvo_ability_spike,"A self-contained hyperdrive rigged to detonate and disrupt drive field bubbles in a set range. They are rarely used due to the danger posed to noncombatants and the rather severe superstitions spacers hold against them, which can result in mutiny aboard carrying ships.",92
 Emergency Fuel Scoop,IndEvo_consumable_scoop,IndEvo_consumable,Consumable,,12000,1000,1,,graphics/icons/cargo/IndEvo_consumable_radar.png,ui_chip_pickup,ui_cargo_special_tech_drop,com.fs.starfarer.api.campaign.impl.items.consumables.singleUseItemPlugins.IndEvo_BaseConsumableItemPlugin,IndEvo_ability_scoop,"Terribly inefficient, expensive, bulky and sensitive - and usually cared for with almost religious fervor, as no other piece of machinery has saved more spacers from a slow, cold death in the far reaches of space.",92
 Sensor Decoy,IndEvo_consumable_decoy,IndEvo_consumable,Consumable,,4000,1000,1,,graphics/icons/cargo/IndEvo_consumable_spike.png,ui_chip_pickup,ui_cargo_special_tech_drop,com.fs.starfarer.api.campaign.impl.items.consumables.singleUseItemPlugins.IndEvo_BaseConsumableItemPlugin,IndEvo_ability_decoy,"A sensor array, probably salvaged from an old ship, rigged to broadcast one massive signal blast then burn out and disintegrate. A pirate favorite, often used to bait unsuspecting victims into an ambush or pull patrols away from a target.",92
+Transpoofer,IndEvo_consumable_spoofer,IndEvo_consumable,Consumable,,7500,1000,1,,graphics/icons/cargo/IndEvo_consumable_transpoofer.png,ui_chip_pickup,ui_cargo_special_tech_drop,com.fs.starfarer.api.campaign.impl.items.consumables.singleUseItemPlugins.IndEvo_SpooferConsumableItemPlugin,IndEvo_ability_spoofer,"Even a black box as robust as the transponder can be hacked if one is desperate enough to risk it. Using modules ripped out of scrapped starships instead comes with a lower chance of acutely finding yourself without a transponder at all, but the internal safety subroutines usually brick the part after a short while.",92
 ,,,,,,,,,,,,,,,
 #Unimplemented,,,,,,,,,,,,,,,
 Survey Drones,IndEvo_consumable_drones,no_drop,Consumable,,5000,1000,1,,graphics/icons/cargo/IndEvo_consumable_drones.png,ui_chip_pickup,ui_cargo_special_tech_drop,com.fs.starfarer.api.campaign.impl.items.consumables.singleUseItemPlugins.IndEvo_BaseConsumableItemPlugin,IndEvo_ability_drones,,92
